--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ next-env.d.ts
 # supabase
 /supabase/scripts/data
 
+# username ban list (server-only, contains profanity list)
+lib/username/banlist.server.ts
+
 # patches and diffs
 *.patch
 *.diff
