--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "posthog-js": "^1.313.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
